# Crossover_bstd_lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bstd.pc.in  install.sh  library.h  main.c  readme.md
include/: arithmetic.h  bstd.h  number.h  numutils.h  picture.h  picutils.h
src/: arithmetic.c  numutils.c  picutils.c
test/: arithmetic_tests.c  command.txt  main.c  number_tests.c  numutils_tests.c  picture_tests.c  picutils_tests.c  reporting.c  run.sh  stress_tests.c  test  test.c
